--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
         <h1>James & Laura</h1>
         <nav>
             <ul id="main-nav" class="nav">
-                <li><a href="#">Home</a> </li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">Wedding</a></li>
                 <li><a href="#">RSVP</a></li>
             </ul>
@@ -22,14 +22,15 @@
     <!--<img src="images/main.jpg"/>-->
     <img class="main-image" src="images/main-800x450.jpg"/>
 
-    <div>
-        <h3>COME CELEBRATE OUR WEDDING</h3>
-    </div>
+
+    <h3>COME CELEBRATE OUR WEDDING</h3>
+
+
 
     <hr/>
     <div>
         <h3>James Kelly</h3>
-        &
+        <div>-&amp;-</div>
         <h3>Laura Grigis</h3>
     </div>
     <hr/>
@@ -42,6 +43,8 @@
         presence of family and friends.
     </p>
     <hr/>
+
+
     <footer>
     </footer>
 
