--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 <div id="main">
-
     <header>
         <h1>James & Laura</h1>
         <nav>
@@ -18,30 +17,32 @@
             </ul>
         </nav>
     </header>
-
-    <!--<img src="images/main.jpg"/>-->
     <img class="main-image" src="images/main-800x450.jpg"/>
 
 
-    <h3>COME CELEBRATE OUR WEDDING</h3>
-
-
-
+    <div class="centered">
+        <h3>COME CELEBRATE OUR WEDDING</h3>
+    </div>
     <hr/>
-    <div>
+
+    <div class="centered">
         <h3>James Kelly</h3>
         <div>-&amp;-</div>
         <h3>Laura Grigis</h3>
     </div>
     <hr/>
 
-    <div>
-        <h3>FRIDAY, OCTOBER 16, 2020</h3>
+    <div class="centered">
+        <h3>FRIDAY, 16th OCTOBER, 2020</h3>
     </div>
-    <p>
-        James and Laura joyfully request the pleasure of your company as we speak our vows and join in marriage in the
-        presence of family and friends.
-    </p>
+
+    <div class="centered">
+        <p class="statement-paragraph">
+            James and Laura joyfully request the pleasure of your company as we speak our vows and join in marriage in the
+            presence of family and friends.
+        </p>
+    </div>
+
     <hr/>
 
 
