--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <!-- TODO: Reduce the size of favicon to be smaller -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <meta charset="UTF-8">
     <title>James & Laura's Wedding</title>
 </head>
@@ -13,38 +15,32 @@
             <ul id="main-nav" class="nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Wedding</a></li>
-                <li><a href="#">RSVP</a></li>
+                <li><a class="chosen" href="#">RSVP</a></li>
             </ul>
         </nav>
     </header>
     <img class="main-image" src="images/main-800x450.jpg"/>
 
-
     <div class="centered">
         <h3>COME CELEBRATE OUR WEDDING</h3>
     </div>
     <hr/>
-
     <div class="centered">
         <h3>James Kelly</h3>
         <div>-&amp;-</div>
         <h3>Laura Grigis</h3>
     </div>
     <hr/>
-
     <div class="centered">
         <h3>FRIDAY, 16th OCTOBER, 2020</h3>
     </div>
-
-    <div class="centered">
+    <div class="centered statement-div">
         <p class="statement-paragraph">
-            James and Laura joyfully request the pleasure of your company as we speak our vows and join in marriage in the
-            presence of family and friends.
+            James and Laura joyfully request the pleasure of your company as we speak our vows and join in marriage in the presence of family and friends.
         </p>
     </div>
 
     <hr/>
-
 
     <footer>
     </footer>
