Fixed the spacing between links

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="main">
     <header>
-        <h1>James & Laura</h1>
+        <h1 class="title">James & Laura</h1>
         <nav>
             <ul id="main-nav" class="nav">
                 <li><a href="#">Home</a></li>
