Started the rsvp form

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,7 +36,8 @@
     </div>
     <div class="centered statement-div">
         <p class="statement-paragraph">
-            James and Laura joyfully request the pleasure of your company as we speak our vows and join in marriage in the presence of family and friends.
+            James and Laura joyfully request the pleasure of your company as we speak our vows and join in marriage in
+            the presence of family and friends.
         </p>
     </div>
 
