--- a/src/main/resources/static/rsvp.html
+++ b/src/main/resources/static/rsvp.html
@@ -1,10 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>James & Laura's Wedding</title>
+    <style>
+        .hidden-error-message {
+            display: none;
+        }
+
+        .displayed-hidden-error-message {
+            color: red;
+        }
+
+        textarea {
+            width: 250px;
+            height: 150px;
+            resize: none;
+        }
+
+        input[type=email], input[type=text], select {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type=submit] {
+            width: 100%;
+            background-color: #4d4e4f;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type=submit]:hover {
+            background-color: #4d4e4f;
+        }
+
+        form {
+            border-radius: 5px;
+            /*background-color: #f2f2f2;*/
+            margin-left: 100px;
+            margin-right: 100px;
+                /*padding: 20px;*/
+        }
+    </style>
 </head>
 <body>
+<div id="main">
+    <header>
+        <h1 class="title">James & Laura</h1>
+        <nav>
+            <ul id="main-nav" class="nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Wedding</a></li>
+                <li><a class="chosen" href="#">RSVP</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="centered">
+        <h3>Please RSVP by February 1, 2016</h3>
+    </div>
+    <hr/>
+    <form action="/" method="post">
 
+        <div id="top-error" class="hidden-error-message">Your form has encountered a problem. Please scroll down to
+            review.
+        </div>
+        <div>
+            <div id="email-error" class="hidden-error-message">Email Address is required.</div>
+            <label class="title">Email Address <span class="required">*</span></label>
+            <input class="field-element" id="email" name="email" type="email" autocomplete="email" spellcheck="false"/>
+        </div>
+
+        <div>
+            <div id="name-error" class="hidden-error-message">Email Address is required.</div>
+            <span>
+        <label class="title">First Name <span class="required">*</span></label>
+        <input class="field-element" id="first-name" name="first-name" type="text" spellcheck="false"/>
+        </span>
+            <span>
+        <label class="title">Second Name <span class="required">*</span></label>
+        <input class="field-element" id="second-name" name="second-name" type="text" spellcheck="false"/>
+        </span>
+        </div>
+
+        <div>
+            <div id="attendance-error" class="hidden-error-message">Attendance is required.</div>
+            <label class="title">Are you attending? <span class="required">*</span></label>
+            <select id="attendance" name="attendance">
+                <option value="unanswered">---</option>
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+            </select>
+        </div>
+
+        <div>
+            <div class="hidden-error-message">Who else is coming with you? is required.</div>
+            <label class="title">Who else is coming with you?<span class="required">*</span></label>
+            <input class="field-element" id="plus-one" name="Who else is coming with you?" type="text"
+                   spellcheck="false"/>
+        </div>
+
+        <div>
+            <div>
+                <label class="title">Message</label>
+            </div>
+            <textarea class="field-element" id="message" name="message" type="text" spellcheck="true">
+        </textarea>
+        </div>
+
+        <div id="bottom-error" class="hidden-error-message">Your form has encountered a problem. Please scroll up to
+            review.
+        </div>
+        <input type="submit" name="submit" value="RSVP"/>
+    </form>
+</div>
 </body>
 </html>
