--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,9 +13,9 @@
         <h1 class="title">James & Laura</h1>
         <nav>
             <ul id="main-nav" class="nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Wedding</a></li>
-                <li><a class="chosen" href="#">RSVP</a></li>
+                <li><a class="chosen" href="rsvp.html">RSVP</a></li>
             </ul>
         </nav>
     </header>
