Change default selection for attendance

--- a/src/main/resources/static/rsvp.html
+++ b/src/main/resources/static/rsvp.html
@@ -100,7 +100,7 @@
             <div id="attendance-error" class="hidden-error-message">Attendance is required.</div>
             <label class="title">Are you attending? <span class="required">*</span></label>
             <select id="attendance" name="attendance">
-                <option value="unanswered">---</option>
+                <option value="unanswered"></option>
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
             </select>
