--- a/src/main/resources/static/rsvp.html
+++ b/src/main/resources/static/rsvp.html
@@ -20,6 +20,14 @@
             resize: none;
         }
 
+        has-error{
+            border: 1px solid red;
+        }
+
+        has-success{
+            border: 1px solid forestgreen;
+        }
+
         input, select {
             width: 100%;
             padding: 12px 20px;
@@ -60,6 +68,7 @@
         }
     </style>
     <!-- http://jsfiddle.net/foxdonut/gq5zx661/ -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
 </head>
 <body>
@@ -88,6 +97,7 @@
             <label class="title">Email Address <span class="required">*</span></label>
             <input class="field-element" id="email" name="email" type="email" placeholder="you@example.com"
                    autocomplete="email" spellcheck="false"/>
+            <div class="messages"></div>
         </div>
 
         <div class="form-group">
@@ -97,6 +107,7 @@
                 <input class="field-element" id="name" name="name" type="text" placeholder="Jane Smith"
                        spellcheck="false"/>
             </span>
+            <div class="messages"></div>
         </div>
 
         <div class="form-group">
@@ -107,6 +118,7 @@
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
             </select>
+            <div class="messages"></div>
         </div>
 
         <div class="form-group">
@@ -114,6 +126,7 @@
             <label class="title">Who else is coming with you?<span class="required">*</span></label>
             <input class="field-element" id="plusOne" name="plusOne" placeholder="Jane's Plus One" type="text"
                    spellcheck="false"/>
+            <div class="messages"></div>
         </div>
         <div class="form-group">
             <div class="hidden-error-message">Number of children is required.</div>
@@ -130,7 +143,7 @@
         <div id="bottom-error" class="hidden-error-message">Your form has encountered a problem. Please scroll up to
             review.
         </div>
-        <button type="submit">RSVP</button>
+        <button type="submit" value="RSVP"/>
     </form>
 </div>
 </body>
