--- a/src/main/resources/static/rsvp.html
+++ b/src/main/resources/static/rsvp.html
@@ -143,7 +143,7 @@
         <div id="bottom-error" class="hidden-error-message">Your form has encountered a problem. Please scroll up to
             review.
         </div>
-        <button type="submit" value="RSVP"/>
+        <input type="submit" value="RSVP"/>
     </form>
 </div>
 </body>
