--- a/src/main/resources/static/rsvp.html
+++ b/src/main/resources/static/rsvp.html
@@ -10,7 +10,7 @@
             display: none;
         }
 
-        .displayed-hidden-error-message {
+        .error-message {
             color: red;
         }
 
@@ -20,29 +20,32 @@
             resize: none;
         }
 
-        has-error{
-            border: 1px solid red;
+        .has-error{
+            border: 3px solid red;
         }
 
-        has-success{
-            border: 1px solid forestgreen;
+        .normal{
+            border: 1.5px solid #ccc;
         }
+
 
         input, select {
             width: 100%;
             padding: 12px 20px;
             margin: 8px 0;
             display: inline-block;
-            border: 1px solid #ccc;
+            /*border: 1px solid #ccc;*/
+            /* TODO This breaks the button */
+            /*height:30px;*/
             border-radius: 4px;
             box-sizing: border-box;
             background-color: white;
-
         }
 
-        select {
-            font-size: 19px;
-        }
+
+        /*select {*/
+            /*font-size: 19px;*/
+        /*}*/
 
         input[type=submit] {
             width: 100%;
@@ -89,30 +92,24 @@
     <hr/>
     <!--<form id="rsvp-form" action="https://formspree.io/jhkelly05@gmail.com" method="POST"/>-->
     <form id="rsvp" action="/rsvp" method="POST" novalidate>
-        <div id="top-error" class="hidden-error-message">Your form has encountered a problem. Please scroll down to
-            review.
-        </div>
         <div class="form-group">
-            <div id="email-error" class="hidden-error-message">Email Address is required.</div>
-            <label class="title">Email Address <span class="required">*</span></label>
-            <input class="field-element" id="email" name="email" type="email" placeholder="you@example.com"
+            <label class="title">Email Address<span class="error-message"></span></label>
+            <input class="has-error" id="email" name="email" type="email" placeholder="you@example.com"
                    autocomplete="email" spellcheck="false"/>
-            <div class="messages"></div>
         </div>
 
         <div class="form-group">
             <div id="name-error" class="hidden-error-message">Name is required.</div>
             <span>
-                <label class="title">Name <span class="required">*</span></label>
-                <input class="field-element" id="name" name="name" type="text" placeholder="Jane Smith"
+                <label class="title">Name<span class="error-message"></span></label>
+                <input class="normal" id="name" name="name" type="text" placeholder="Jane Smith"
                        spellcheck="false"/>
             </span>
             <div class="messages"></div>
         </div>
 
         <div class="form-group">
-            <div id="attendance-error" class="hidden-error-message">Attendance is required.</div>
-            <label class="title">Are you attending?<span class="required">*</span></label>
+            <label class="title">Are you attending?<span class="error-message"></span></label>
             <select id="attendance" name="attendance">
                 <option value="unanswered"></option>
                 <option value="yes">Yes</option>
@@ -122,27 +119,24 @@
         </div>
 
         <div class="form-group">
-            <div class="hidden-error-message">Who else is coming with you? is required.</div>
-            <label class="title">Who else is coming with you?<span class="required">*</span></label>
-            <input class="field-element" id="plusOne" name="plusOne" placeholder="Jane's Plus One" type="text"
+            <label class="title">Who else is coming with you?<span class="error-message"></span></label>
+            <input class="normal" id="plusOne" name="plusOne" placeholder="Jane's Plus One" type="text"
                    spellcheck="false"/>
             <div class="messages"></div>
         </div>
         <div class="form-group">
             <div class="hidden-error-message">Number of children is required.</div>
-            <label class="title">How many children will be attending?<span class="required">*</span></label>
-            <input class="field-element" id="childrenNumber" name="childrenNumber" type="number"
+            <label class="title">How many  children will be attending?<span class="error-message"></span></label>
+            <input class="normal" id="childrenNumber" name="childrenNumber" type="number"
                    min="0" value="0"/>
         </div>
         <div>
             <div>
                 <label class="title">Message</label>
             </div>
-            <textarea class="field-element" id="message" name="message" type="text" spellcheck="true"></textarea>
+            <textarea class="normal" id="message" name="message" type="text" spellcheck="true"></textarea>
         </div>
-        <div id="bottom-error" class="hidden-error-message">Your form has encountered a problem. Please scroll up to
-            review.
-        </div>
+        <div id="bottom-error" class="hidden-error-message">Your form has encountered a problem. Please scroll up to review.</div>
         <input type="submit" value="RSVP"/>
     </form>
 </div>
